Add App Store link for Rate Assistant and Httper.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -225,7 +225,9 @@
 				</div>
 				<div class="col-sm-4 col-md-4">
 					<img src="static/images/rate-qrcode.png" class="qrcode">
-					<img src="static/images/appstore.png" class="appstore">
+					<a href="https://itunes.apple.com/app/rate-assistant-monitor-rate/id1139573801" target="_blank">
+						<img src="static/images/appstore.png" class="appstore">
+					</a>
 				</div>
 			</div>
 		</div>
@@ -250,7 +252,9 @@
 				</div>
 				<div class="col-sm-4 col-md-4">
 					<img src="static/images/httper-qrcode.png" class="qrcode">
-					<img src="static/images/appstore.png" class="appstore">
+					<a href="https://itunes.apple.com/app/httper/id1166884043" target="_blank">
+						<img src="static/images/appstore.png" class="appstore">
+					</a>
 				</div>
 			</div>
 		</div>
