Translate Japanese for blogs list page and blog page.

--- a/WebContent/blog.html
+++ b/WebContent/blog.html
@@ -41,6 +41,7 @@
 						<ul class="dropdown-menu" aria-labelledby="language-selector-button">
 							<li data-lang="en-US"><a>English</a></li>
 							<li data-lang="zh-CN"><a>简体中文</a></li>
+							<li data-lang="ja"><a>日本語</a></li>
 						</ul>
 					</div>
 					<div class="clearfix"> </div>
@@ -106,7 +107,7 @@
             	</div>
             </div>
 		</div>
-		<div class="copy-right text-center">
+		<div class="copyright text-center">
 			<div class="container">
 				<p>Made by Meng Li. <a href="admin" target="_blank">Manage My Blog</a></p>
 				<label>Copyright of Meng Li © 2014-2016. All rights reserved. 鄂ICP备15010075号-1</label>
