--- a/WebContent/blogs.html
+++ b/WebContent/blogs.html
@@ -35,6 +35,7 @@
 						<ul class="dropdown-menu" aria-labelledby="language-selector-button">
 							<li data-lang="en-US"><a>English</a></li>
 							<li data-lang="zh-CN"><a>简体中文</a></li>
+							<li data-lang="ja"><a>日本語</a></li>
 						</ul>
 					</div>
 					<div class="clearfix"> </div>
@@ -99,7 +100,7 @@
                 <ul class="pagination"></ul>
             </nav>
 		</div>
-		<div class="copy-right text-center">
+		<div class="copyright text-center">
 			<div class="container">
 				<p>Made by Meng Li. <a href="admin" target="_blank">Manage My Blog</a></p>
 				<label>Copyright of Meng Li © 2014-2016. All rights reserved. 鄂ICP备15010075号-1</label>
