Remove image shadow; remove font family.

--- a/WebContent/blogs.html
+++ b/WebContent/blogs.html
@@ -27,7 +27,7 @@
 			<div class="top-header">
 				<div class="container">
 					<h1 class="pull-left home"><a href="index.html">@{blogs_home}</a></h1>
-					<div id="language-selector" class="dropdown pull-right">
+					<div id="language-selector" class="dropdown pull-right language">
 						<button id="language-selector-button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
 							<span >@{language_broswer}</span>
 							<span class="caret"></span>
