--- a/WebContent/blog.html
+++ b/WebContent/blog.html
@@ -107,11 +107,12 @@
             	</div>
             </div>
 		</div>
-		<div class="copyright text-center">
-			<div class="container">
-				<p>Made by Meng Li. <a href="admin" target="_blank">Manage My Blog</a></p>
-				<label>Copyright of Meng Li © 2014-2016. All rights reserved. 鄂ICP备15010075号-1</label>
-			</div>
+		<div id="foot">
+			<script>
+				$(document).ready(function() {
+					$("#foot").load("foot.html");
+				});
+			</script>
 		</div>
 		<div id="attachment-download-modal" class="modal fade">
             <div class="modal-dialog">
