Fix the foot path error in blog page.

--- a/WebContent/blog.html
+++ b/WebContent/blog.html
@@ -110,7 +110,7 @@
 		<div id="foot">
 			<script>
 				$(document).ready(function() {
-					$("#foot").load("foot.html");
+					$("#foot").load("../foot.html");
 				});
 			</script>
 		</div>
