Update project information.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -105,17 +105,17 @@
 				</div>
 				<div id="le3" class="col-xs-6 col-md-3 level">
 					<h2>Le.3</h2>
-					<h4>JavaScript, HTML, CSS</h4>
+					<h4>JavaScript, Swift</h4>
 					<p>@{le3}</p>
 				</div>
 				<div id="le2" class="col-xs-6 col-md-3 level">
 					<h2>Le.2</h2>
-					<h4>C, Swift</h4>
+					<h4>C, C++</h4>
 					<p>@{le2}</p>
 				</div>
 				<div id="le1" class="col-xs-6 col-md-3 level">
 					<h2>Le.1</h2>
-					<h4>C++, C#</h4>
+					<h4>C#, VHDL, Assembly</h4>
 					<p>@{le1}</p>
 				</div>
 			</div>
@@ -161,7 +161,6 @@
 						<li>@{blog_introdution_2}</li> 
 						<li>@{blog_introdution_3}</li> 
 						<li>@{blog_introdution_4}</li> 
-						<li>@{blog_introdution_5}</li> 
 					</ul>
 				</div>
 				<div class="col-sm-4 col-md-4">
