User and admin download attachment.

--- a/src/main/webapp/admin/edit.html
+++ b/src/main/webapp/admin/edit.html
@@ -159,7 +159,7 @@
                                     <i class="fa fa-trash text-danger attachment-list-remove"></i>
                                 </div>
                                 <div class="col-xs-2 col-sm-1">
-                                    <a href="../UploadServlet?task=downloadByAid&aid=${aid}$" target="_blank">
+                                    <a href="/download/admin?aid=${aid}$" target="_blank">
                                         <i class="fa fa-download text-primary attachment-list-download"></i>
                                     </a>
                                 </div>
